# xiaoyan

./: .env.example  .gitignore  .impeccable.md  .npmrc  AGENTS.md  ASSETS_LICENSE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TESTING_SUMMARY.md  TRADEMARKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  turbo.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/markitdown-runtime/: README.md
apps/desktop/src-tauri/resources/: ccfddl.json
apps/desktop/src-tauri/scripts/: prepare-markitdown-runtime.py
apps/desktop/src-tauri/src/: agent_graph.rs  agent_nodes.rs  agent_workspace.rs  ai_live_test.rs  assistant_prompts.rs  ccf.rs  citation_graph.rs  db.rs  graph_rag.rs  journal_partitions.rs  lib.rs  links.rs  llm.rs  main.rs  markitdown_runtime.rs  opencode.rs  rag.rs  semantic_scholar.rs  state.rs  text_utils.rs  token_usage.rs  web_search.rs
apps/desktop/src-tauri/src/code/: context.rs  git.rs  glob.rs  mod.rs  prompt.rs  store.rs  tools.rs
apps/desktop/src-tauri/src/commands/: academic_writing.rs  active_researcher.rs  app_lock.rs  arxiv.rs  ccf.rs  chat.rs  chat_tools.rs  citation_graph.rs  code.rs  data_backup.rs  evidence.rs  experiment.rs  export.rs  field_dynamics.rs  github_project.rs  journal.rs  knowledge.rs  knowledge_graph.rs  knowledge_notes.rs  knowledge_plan_status.rs  memory.rs  memory_checkpoints.rs  memory_privacy.rs  misc.rs  mod.rs  opencode.rs  paper_analysis_prompts.rs  paper_analysis_text.rs  paper_artifacts.rs  paper_corpus.rs  paper_cross_analysis.rs  paper_figure_images.rs  paper_figure_pages.rs  paper_figures.rs  paper_notes.rs  paper_search.rs  paper_search_plan.rs  paper_source_fix.rs  paper_text.rs  papers.rs  (+16 more)
apps/desktop/src-tauri/src/data/: ccf_catalog.json
apps/desktop/src-tauri/src/llm/: shared.rs  transport.rs
apps/desktop/src-tauri/src/repositories/: mod.rs  settings_repository.rs  submission_repository.rs
apps/desktop/src-tauri/src/services/: active_researcher_service.rs  agent_context_service.rs  agent_event_service.rs  agent_routing_service.rs  agent_runtime_service.rs  agent_tool_service.rs  chat_context_service.rs  evidence_service.rs  field_dynamics_service.rs  memory_checkpoint_service.rs  memory_privacy_service.rs  memory_retrieval_service.rs  mod.rs  paper_parser_service.rs  research_context_service.rs  secure_store.rs  settings_service.rs  source_service.rs  submission_diagnosis_service.rs  submission_revision_service.rs  submission_service.rs  sync_service.rs  webdav_service.rs
apps/desktop/src-tauri/src/services/field_dynamics_service/: briefing.rs  storage.rs
apps/desktop/src-tauri/src/services/wiki/: auto_compile.rs  compiler.rs  lint.rs  mod.rs  repository.rs  retrieval.rs  schema.rs  shared.rs
apps/desktop/src-tauri/src/services/wiki/auto_compile/: schema.rs  worker.rs
apps/desktop/src-tauri/src/services/wiki/compiler/: persistence.rs  sources.rs
apps/desktop/src-tauri/zh-Hans.lproj/: Localizable.strings
apps/desktop/src-tauri/zh_CN.lproj/: Localizable.strings
backend/: pyproject.toml  requirements.txt  worker.py
docs/: 01-项目概述与核心亮点.md  02-技术创新点.md  03-功能创新点.md  04-架构设计亮点.md  05-答辩PPT大纲.md  PRD-0.6.0-桌面悬浮助手.md  PRD-idea-novelty-validation.md  PRD-xiaoyan-0.4.1.md  PRD-xiaoyan-0.4.2-next.md  PRD-xiaoyan-0.4.2.md  companion-action-expansion.md  data-source-research.md  defense-ppt-required-features.md  defense-technical-qa.md  development-principles.md  field-dynamics-roadmap.md  llm-wiki-and-hybrid-retrieval.md  mineru-integration-plan.md  multi-agent-submission-review.md  paper-format-checker.md  paper-traceability-design.md  patent-tool-roadmap.md  poster-prompt.md  prompt-copy-standards.md  refactor-roadmap.md  release-0.4.0-plan.md  submission-author-roadmap.md  system-introduction-desktop.md  webdav-sync-design.md  xiaoyan-long-term-memory-plan.md  答辩文档索引.md
(+926 files in other folders)
