[package]
name = "research-copilot-desktop"
version = "0.2.8"
edition = "2021"

[lib]
name = "research_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "stream"] }
# Async utilities
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
# PDF text extraction
pdf-extract = "0.7"
roxmltree = "0.20"
# PDF image extraction
lopdf = "0.32"
# Image encoding (PNG/JPEG)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Base64 for figure data API
base64 = "0.22"
