[package]
name = "xiaoyan-desktop"
version = "0.4.4"
edition = "2021"

[lib]
name = "xiaoyan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "stream"] }
# Async utilities
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
# PDF text extraction
pdf-extract = "0.7"
roxmltree = "0.20"
# PDF image extraction
lopdf = "0.32"
# Zlib decompression for FlateDecode PDF images
flate2 = "1"
# Image encoding (PNG/JPEG)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Base64 for figure data API and settings export
base64 = "0.22"
# Capture stderr for filtering noisy PDF extraction warnings
gag = "1"
# Encryption for settings export/import (AES-256-GCM + PBKDF2)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
# Regex for HTML parsing in web clip
regex = "1"
petgraph = "0.6"
serde_yaml = "0.9"
# ZIP archive extraction for note import
zip = "2"
# 跨平台系统钥匙串（macOS Keychain / Windows Credential Manager / Linux Secret Service）
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# 跨平台操作系统类型与版本（用于反馈上报的客户端信息）
os_info = "3"
